--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Hangman</h1>
     <p>Find the hidden word - Press a letter</p>
+    <div class="hint-container">
+      <p id="hint"></p>
+    </div>
     <div class="game-container">
       <svg height="250" width="200" class="figure-container">
         <!-- rod -->
